--- a/index.html
+++ b/index.html
@@ -3,56 +3,24 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- displays site properly based on user's device -->
-
-    <link
-      rel="icon"
-      type="image/png"
-      sizes="32x32"
-      href="./assets/images/favicon-32x32.png"
-    />
-
+    <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png" />
     <link rel="stylesheet" href="./assets/css/style.css" />
-
     <title>Social links profile</title>
-
-    <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-    <!-- <style>
-      .attribution {
-        font-size: 11px;
-        text-align: center;
-      }
-      .attribution a {
-        color: hsl(228, 45%, 44%);
-      }
-    </style> -->
   </head>
   <body>
     <div class="profile__card">
-      <!-- <div class="img-box">
-
-      </div> -->
-      <img
-        src="./assets/images/avatar-jessica.jpeg"
-        alt="Jessica Randall"
-        class="profile__img"
-      />
-      <h2>Jessica Randall</h2>
+      <img src="https://ca.slack-edge.com/T0164TN77FC-U015Q5TLHHD-75f844e56ae5-192" alt="Jessica Randall" class="profile__img" />
+      <h1>Jessica Randall</h1>
       <p class="profile__location">London, United Kingdom</p>
       <p class="profile__bio">"Front-end developer and avid reader."</p>
-      <div class="profile__buttons">
-        <a href="#" class="btn">GitHub</a>
-        <a href="#" class="btn">Frontend Mentor</a>
-        <a href="#" class="btn">LinkedIn</a>
-        <a href="#" class="btn">Twitter</a>
-        <a href="#" class="btn">Instagram</a>
+
+      <div class="profile__btns">
+        <a href="#">GitHub</a>
+        <a href="#">Frontend Mentor</a>
+        <a href="#">LinkedIn</a>
+        <a href="#">Twitter</a>
+        <a href="#">Instagram</a>
       </div>
     </div>
-    <!-- <div class="attribution">
-      Challenge by
-      <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
-        >Frontend Mentor</a
-      >. Coded by <a href="#">Your Name Here</a>.
-    </div> -->
   </body>
 </html>
